load("//bazel:cc_binary_with_flags.bzl", "cc_binary_with_flags")
load("//bazel:skia_rules.bzl", "exports_files_legacy")

licenses(["notice"])

exports_files_legacy()

cc_binary_with_flags(
    name = "hello_world_gl",
    testonly = True,
    srcs = [
        "HelloWorld.cpp",
        "HelloWorld.h",
    ],
    # These flags are defined in //bazel/common_config_settings/BUILD.bazel
    set_flags = {
        # Use the GL backend with the normal GL standard (as opposed to WebGL or GLES)
        "gpu_backend": [
            "gl_ganesh",
        ],
        "with_gl_standard": [
            "gl_standard",
        ],
    },
    deps = [
        "//:skia_public",
    ] + select({
        "@platforms//os:macos": ["//tools/sk_app:legacy_sk_app_objc"],
        "@platforms//os:linux": ["//tools/sk_app:legacy_sk_app"],
        "//conditions:default": [],
    }),
)
